# docker-odoo-project

./: .gitlab-ci.yml  .gitmodules  .hadolint.yaml  .pre-commit-config.yaml  .travis.yml  Dockerfile  HISTORY-core.rst  HISTORY.rst  Makefile  README.md  TODO  build.sh  setup.sh  test.sh
10.0/: Dockerfile  Dockerfile-onbuild  base_requirements.txt  extra_requirements.txt
11.0/: Dockerfile  Dockerfile-onbuild  base_requirements.txt  extra_requirements.txt
12.0/: Dockerfile  (+2 more)
12.0-buster/: Dockerfile  base_requirements.txt
example/: .dockerignore  Dockerfile  Dockerfile-onbuild  README.md  docker-compose.override.yml  docker-compose.yml  migration.yml  pyproject.toml  requirements.txt  setup.py  test-compose.yaml  test-compose.yml
example/data/setup/: README.md
example/data/story/: README.md
example/etc/: openerp.cfg
example/external-src/: README.md
example/features/setup/: 000_init.feature
example/features/steps/: ir_attachment.py
example/features/story/: 001_story_example.feature
example/local-src/: README.md
example/odoo/: .dockerignore  Dockerfile  Dockerfile-onbuild  migration.yml  project.yml  requirements.txt  setup.py
example/odoo/addons/dummy_test/: __manifest__.py
example/odoo/addons/dummy_test/tests/: test_dummy.py
example/odoo/etc/: openerp.cfg.tmpl
example/odoo/features/upgrade/0.0.2/: upgrade.feature
example/odoo/local-src/dummy_test/: __manifest__.py
example/odoo/local-src/dummy_test/tests/: __init__.py
example/odoo/songs/install/: base.py  demo.py
example/odoo/src/: README.md
example/songs/install/: base.py  demo.py
(+119 files in other folders)
